--- a/src/app/sites/vigilance/vigilance.component.html
+++ b/src/app/sites/vigilance/vigilance.component.html
@@ -44,7 +44,7 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let test of filteredTests | paginate: { itemsPerPage: itemsPerPage, currentPage: currentPage }">
-                        <td>{{ test?.id_test }}</td>
+                        <td><p style="width: 100%; display:flex; justify-content: center;">{{ test?.id_test }}</p></td>
                         <td>{{ test?.tipo_test }}</td>
                         <td>
                             {{ test?.paciente }}
@@ -55,17 +55,17 @@
                                 <p class="color" [style.background-color]="test.color"></p>
                             </div>
                         </td>
-                        <td>{{ test?.fecha | date: 'dd/MM/yyyy - HH:mm:ss' }}</td>
+                        <td><p style=" width: 100%; display:flex; justify-content: center;">{{ test?.fecha | date: 'dd/MM/yyyy - HH:mm:ss' }}</p></td>
                         <td>
                             <span class="badge" [ngClass]="{'bg-success': test.consignacion, 'bg-warning': !test.consignacion}">
                                 {{ test.consignacion ? 'Consignada' : 'Por Consignar' }}
                             </span>
                         </td>
                         <td class="actions">
-                            <button class="btn btn-info btn-sm me-2" (click)="viewTestDetails(test)">
+                            <button class="btn btn-info btn-sm me-2" style="width: 100%; display:flex; justify-content: center" (click)="viewTestDetails(test)">
                                 Ver Detalle
                             </button>
-                            <button *ngIf="!test.consignacion" class="btn btn-primary btn-sm" (click)="getTest(test)">
+                            <button *ngIf="!test.consignacion" style="width: 100%; display:flex; justify-content: center" class="btn btn-primary btn-sm" (click)="getTest(test)">
                                 Consignar
                             </button>
                         </td>
