--- a/src/app/sites/autenticacion/login/login.component.html
+++ b/src/app/sites/autenticacion/login/login.component.html
@@ -10,11 +10,21 @@
                                 <label for="correo">Correo</label>
                                 <input type="email" formControlName="correo" class="form-control mt-2" id="correo"
                                     placeholder="Ingrese su correo">
+                                <div *ngIf="loginForm.get('correo')?.invalid && (loginForm.get('correo')?.dirty || loginForm.get('correo')?.touched)" class="text-danger">
+                                    <div *ngIf="loginForm.get('correo')?.errors?.['required']">
+                                        Este campo es requerido.
+                                    </div>
+                                </div>
                             </div>
                             <div class="form-group mt-4">
                                 <label for="password">Contraseña</label>
                                 <input type="password" formControlName="password" class="form-control mt-2"
                                     id="password" placeholder="Ingrese su contraseña">
+                                <div *ngIf="loginForm.get('password')?.invalid && (loginForm.get('password')?.dirty || loginForm.get('password')?.touched)" class="text-danger">
+                                    <div *ngIf="loginForm.get('password')?.errors?.['required']">
+                                        Este campo es requerido.
+                                    </div>
+                                </div>
                             </div>
                         </form>
                         <div class="options">
@@ -56,6 +66,9 @@
                             <option value="Pasaporte">Pasaporte</option>
                             <option value="CE">Carnet de Extranjería</option>
                         </select>
+                        <div *ngIf="this.registerPacienteForm.get('tipo_documento')?.errors?.['required']" class="text-danger">
+                            Este campo es requerido.
+                        </div>
                     </div>
                     <div class="form-group">
                         <label for="documento">Número de Documento</label>
