update heatmap style

--- a/src/app/sites/mapa/mapa.component.html
+++ b/src/app/sites/mapa/mapa.component.html
@@ -25,7 +25,7 @@
 </div>
 
 <div class="map">
-    <div id="map" style="height: 500px; width: 80%;"></div>
+    <div id="map" style="height: 80vh; width: 80%;"></div>
     <div #popup id="popup" class="ol-popup">
         <div #popupContent id="popup-content"></div>
     </div>
