--- a/src/app/sites/autenticacion/login/login.component.css
+++ b/src/app/sites/autenticacion/login/login.component.css
@@ -127,3 +127,45 @@ button {
         font-size: 0.9rem;
     }
 }
+
+
+
+
+  .button2-3d {
+    -webkit-appearance: none;
+    appearance: none;
+    position: relative;
+    border-width: 0;
+    padding: 0 8px;
+    min-width: 4em;
+    min-height: 4em;
+    box-sizing: border-box;
+    background: transparent;
+    font: inherit;
+    cursor: pointer;
+    margin: 10px;
+    border-radius: 20px;
+
+  }
+  .button2-3d:hover {
+    transform: scale(1.05);
+   }
+
+  .button2-top {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    z-index: 2;
+    padding: 8px 16px;
+    transform: translateY(0);
+    color: #fff;
+    background-image: linear-gradient(145deg, #31bacf, #007B8F);
+    text-shadow: 0 -1px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    transition: transform 0.3s, border-radius 0.3s, background 10s;
+  }
+
+.etiqueta-card{
+    background-color: #a7dee6;
+}
