send email function added in  Vigilance component and services

--- a/src/app/sites/vigilance/vigilance.component.html
+++ b/src/app/sites/vigilance/vigilance.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-4">
     <h2 class="mb-4 text-center">Gestión de Tests Realizados</h2>
 
-    <div *ngIf="!selectedTest; else testDetail">
+    <div *ngIf="!selectedTest && !esOpcionEnviarEmail; else testDetail">
         <div class="mb-3 row">
             <div class="col-md-4">
                 <p>Filtrar por caso</p>
@@ -26,6 +26,10 @@
                     <option value="true">Consignada</option>
                     <option value="false">Por Consignar</option>
                 </select>
+            </div>
+            <div class="col-md-4 mt-3">
+                <p>Filtrar por fecha</p>
+                <input type="date" class="form-control" [(ngModel)]="filterFecha" (ngModelChange)="applyFilters()" placeholder="Seleccione una fecha">
             </div>
         </div>
 
@@ -80,7 +84,7 @@
     </div>
 
     <ng-template #testDetail>
-        <div *ngIf="selectedTest" class="card mb-4">
+        <div *ngIf="selectedTest && !esOpcionEnviarEmail" class="card mb-4">
             <div class="card-header bg-secondary text-white">
                 <h5 class="mb-0">Test Seleccionado - {{ test?.tipo_test }}</h5>
             </div>
@@ -88,6 +92,7 @@
                 <p><strong>ID TEST:</strong> {{ test?.id_test }}</p>
                 <p><strong>TIPO TEST:</strong> {{ test?.tipo_test }}</p>
                 <p><strong>PACIENTE:</strong> {{ test?.paciente }}</p>
+                <p><strong>CORREO DEL PACIENTE:</strong> {{ test?.correo_paciente }}</p>
                 <p><strong>RESULTADO:</strong> {{ test?.resultado }} pts.</p>
                 <p><strong>FECHA:</strong> {{ test?.fecha | date: 'dd/MM/yyyy - HH:mm:ss' }}</p>
                 <p><strong>Ansiedad certificada: </strong>{{ vigilancia?.diagnostico?.descripcion || 'No hay certificacion disponible' }}</p>
@@ -152,6 +157,17 @@
             <button *ngIf="!esOpcionConsignar" (click)="cancel()" class="btn btn-danger mt-3">Volver</button>
         </div>
     </ng-template>
+
+    <div *ngIf="esOpcionEnviarEmail">
+        <div class="alert alert-success" role="alert">
+            VIGILANCIA REALIZADA CON ÉXITO
+        </div>
+        <div class="mt-3">
+            <h5>Debemos notificar vía correo al paciente</h5>
+            <textarea class="form-control mt-2" [(ngModel)]="email_content" placeholder="Ingrese el correo" required></textarea>
+            <button class="btn btn-primary mt-3" (click)="sendEmail()">NOTIFICAR PACIENTE</button>
+        </div>
+    </div>
 
     <ng-template #NoTest>
         <div class="alert alert-warning text-center" role="alert">
