option TipoDocumento updated

--- a/src/app/sites/autenticacion/login/login.component.html
+++ b/src/app/sites/autenticacion/login/login.component.html
@@ -456,7 +456,7 @@
             >
               <option value="DNI">DNI</option>
               <option value="Pasaporte">Pasaporte</option>
-              <option value="Carnet de Extranjería">
+              <option value="CE">
                 Carnet de Extranjería
               </option>
             </select>
